--- a/_includes/modules/timeline/exp.html
+++ b/_includes/modules/timeline/exp.html
@@ -19,13 +19,13 @@
         <h3>Zenman Productions</h3>
         <h4>Front-End Developer</h4>
         <ul>
-            <li>The majority of my technical work involved hand-coding custom WordPress themes.</li>
+            <li>The majority of my technical work involved hand-coding <a href="portfolio">custom WordPress websites</a>.</li>
             <li>I crafted development processes and mentored my development team to maximize Zenman's level of quality.</li>
-            <li>I developed an essentials-only theme used as the basis for all Zenman's WordPress websites.</li>
+            <li>I developed an <a href="https://github.com/zenman/zemplate" target="_blank">essentials-only theme</a> used as the basis for all Zenman's WordPress websites.</li>
             <li>I installed and customized plugins like Advanced Custom Fields, BuddyPress, and WooCommerce.</li>
-            <li>We had no DevOps, so I filled in, creating build scripts, git webhooks, deployment scripts, and bash helper scripts.</li>
+            <li>We had no DevOps, so I filled in, creating <a href="https://github.com/tcmulder/zen-build" target="_blank">build scripts</a>, <a href="https://github.com/tcmulder/zen-hooks" target="_blank">git webhooks</a>, <a href="https://github.com/tcmulder/bash-deploy" target="_blank">deployment scripts</a>, and <a href="https://github.com/tcmulder/bash-create-project" target="_blank">bash helper scripts</a>.</li>
             <li>I developed various front-end deliverables in systems like Shopify, HubSpot,  and Fishbowl.</li>
-            <li>I spoke at <a href="https://generalassemb.ly/" target="_blank">General Assembly</a> events and taught a paid, full-day JavaScript fundamentals workshop.</li>
+            <li>I spoke at <a href="https://generalassemb.ly/instructors/tomas-mulder/8188" target="_blank">General Assembly</a> events and taught a paid, full-day JavaScript fundamentals workshop.</li>
         </ul>
     </div>
 
