--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,11 +12,11 @@
 <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
 {% if page.default_css %}
     {% for stylesheet in page.default_css %}
-        <link rel="stylesheet" href="/css/{{ stylesheet }}.css" type="text/css">
+        <link rel="stylesheet" href="/css/{{ stylesheet }}.css?t=1484243905" type="text/css">
     {% endfor %}
 {% endif %}
 {% if page.page_css %}
     {% for stylesheet in page.page_css %}
-        <link rel="stylesheet" href="/css/{{ stylesheet }}.css" type="text/css">
+        <link rel="stylesheet" href="/css/{{ stylesheet }}.css?t=1484243905" type="text/css">
     {% endfor %}
 {% endif %}
