Update spacing and link colors for exp

--- a/_includes/modules/timeline/exp.html
+++ b/_includes/modules/timeline/exp.html
@@ -12,7 +12,7 @@
     <div class="exp__group exp__group--hire">{% comment %} 2017-Present {% endcomment %}
         <h3>Now Available for Hire!</h3>
         <h4>Front-End Engineer</h4>
-        <p>I'm currently looking for the next level-up in my career and couldn't be more excited! In the meantime I'm teaching myself React/Redux and the new WordPress REST API. If you know someone looking for an extraordinary (and humble) developer to enhance their team, please <a href="javascript:void(0);"><label for="popup--email">email me about jobs</label></a>.</p>
+        <p>I'm currently looking for the next level-up in my career and couldn't be more excited! In the meantime I'm learning React/Redux and the new WordPress REST API. If you know someone looking for an extraordinary (and humble) developer to enhance their team, please <a href="javascript:void(0);"><label for="popup--email">email me about jobs</label></a>.</p>
     </div>
 
     <div class="exp__group exp__group--zenman">{% comment %} 2012-2016 {% endcomment %}
