--- a/_includes/modules/timeline/exp.html
+++ b/_includes/modules/timeline/exp.html
@@ -10,9 +10,11 @@
     narrower... not something absolute positioned things like to do.
     -->
     <div class="exp__group exp__group--hire">{% comment %} 2017-Present {% endcomment %}
-        <h3>Now Available for Hire!</h3>
-        <h4>Front-End Engineer</h4>
-        <p>I'm currently looking for the next level-up in my career and couldn't be more excited! In the meantime I'm learning React/Redux and the new WordPress REST API. If you know someone looking for an extraordinary (and humble) developer to enhance their team, please <a href="javascript:void(0);"><label for="popup--email">email me about jobs</label></a>.</p>
+        <h3>Freelance</h3>
+        <h4>WordPress Developer</h4>
+        <p>
+            Right now I'm doing freelance development and am mostly focusing on WordPress projects. If you're looking for an expert hand with your project, I'd love to get in touch! Feel free to <a href="javascript:void(0);"><label for="popup--email">email me about your project</label></a> to get started.
+        </p>
     </div>
 
     <div class="exp__group exp__group--zenman">{% comment %} 2012-2016 {% endcomment %}
