Add link to aquamarine

--- a/_includes/modules/timeline/exp.html
+++ b/_includes/modules/timeline/exp.html
@@ -13,7 +13,7 @@
         <h3>Freelance</h3>
         <h4>WordPress Developer</h4>
         <p>
-            Right now I'm doing freelance development and am mostly focusing on WordPress projects. If you're looking for an expert hand with your project, I'd love to get in touch! Feel free to <a href="javascript:void(0);"><label for="popup--email">email me about your project</label></a> to get started.
+            Right now I'm doing freelance development and am mostly focusing on WordPress projects. If you're looking for an expert hand with your project, I'd love to get in touch! Visit my <a href="http://www.thinkaquamarine.com" target="_blank">freelance website</a> or feel free to <a href="javascript:void(0);"><label for="popup--email">email me</label></a> to get started.
         </p>
     </div>
 
